Changelog
=========


1.0.0a5 (unreleased)
--------------------

- Nothing changed yet.


1.0.0a4 (2015-12-09)
--------------------

- Fix image display with for form image widget.
  [mathias.leimgruber]


1.0.0a3 (2015-12-08)
--------------------

- Fix print issues with deco grid and simplelayout.
  IE printed only the first page, Safari did not use the print css at all.
  [Kevin, mathias.leimgruber]


1.0.0a2 (2015-12-07)
--------------------

- Fix mobilenavigation fixed navigation elements
  [elioschmutz]


1.0.0a1 (2015-12-04)
--------------------

- Initial implementation
  [jone]