@@ -1,79 +1,9 @@
-$pathbar-bg-color: $gray-lighter !default;
-$pathbar-arrow-color: #fff !default;
-$pathbar-text-color: $text-color !default;
-$pathbar-font-weight: normal !default;
-
-@include declare-variables(
-  pathbar-bg-color,
-  pathbar-arrow-color,
-  pathbar-text-color);
-
-.template-startpage #breadcrumbs-wrapper,
-body.portaltype-ftw-subsite-subsite #breadcrumbs-wrapper{
-  margin-top: 2em;
-}
-
-body.portaltype-plone-site,
-body.portaltype-ftw-subsite-subsite {
-  #breadcrumbs-wrapper {
-    margin-bottom: 0;
-    #portal-breadcrumbs {
-      display:none;
-    }
-  }
-}
-
-#breadcrumbs-wrapper {
-  margin-top: 1em;
-  margin-bottom: 2em;
-  display:none;
-
-  #breadcrumbs-you-are-here {
-    visibility: hidden;
-    width: 0;
-    height: 0;
-  }
-
-  #portal-breadcrumbs {
-    width: 100%;
-    background-color: $pathbar-bg-color;
-    @include clearfix();
-    > span {
-      float: left;
-      > a {
-        display: block;
-        color: $pathbar-text-color;
-        padding: 6px;
-        font-weight: $pathbar-font-weight;
-        font-size: $font-size-small;
-        float: left;
-        &:hover {
-          color: $link-hover-color;
-        }
-      }
-      // White separator between pathbar lines
-      &:before {
-        content: "";
-        position: absolute;
-        background-color: #fff;
-        left: 0;
-        right: 0;
-        height: 2px;
-        margin-top: -1px;
-      }
-      > .breadcrumbSeparator {
-        display: block;
-        float: left;
-        width: 18px;
-        height: 31px;
-        background-image: url("++theme++plonetheme.onegovbear/images/pathbar_separator.svg");
-        background-repeat: no-repeat;
-      }
-    }
-  }
+#portal-breadcrumbs {
+  display: none;
 
   @include screen-large {
     display: block;
   }
-}
 
+  margin-bottom: 30px;
+}
